--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@ Deskripsi  : Website Portfolio Kevin Arga Rajagukguk
                 <h2>Kevin Arga Rajagukguk</h2>
                 <h2>Fresh Graduate Geofisika</h2>
                 <p>
-                    Mengolah data kebumian untuk memahami bumi dan mendukung
-                    masa depan energi yang berkelanjutan.
+                    Mengolah data kebumian untuk memahami bumi dan mendukung masa depan energi yang berkelanjutan.
+    Terbuka terhadap peluang karier di bidang energi, geosains, analisis data, teknologi,
+    serta peran strategis yang membutuhkan kemampuan analitis dan problem solving
                 </p>
 
                 <a 
