--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Deskripsi  : Website Portfolio Kevin Arga Rajagukguk
     <header>
         <nav class="navbar">
             <div class="logo">
-                <h1>GeoPortfolio</h1>
+                <h1>Portfolio</h1>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
